--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
+.home
+{
+    font-family: 'Courier New', Courier, monospace;
+}
 
+#text2
+{
+    font-family: "Philosopher", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+    
+}
 
 
 
